--- a/index.html
+++ b/index.html
@@ -11,7 +11,16 @@
 <div id="contenedor">
     <div class="cuadrado"></div>
     <div class="circulo"></div>
+    <div class="triangulo"></div>
 </div>
-
-<div class="triangulo"></div>
+<hr>
+<div id="container2">
+  <div class="cuadrado2"></div>
+</div>
+<div id="container3" >
+  <div class="circulo2"></div>
+</div>
+<div id="container4" >
+  <div class="triangulo2"></div>  
+</div>
   
