--- a/index.html
+++ b/index.html
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="Cachan.ico" />
+  <link rel="shortcut icon" href="favicon.ico" />
   <link rel="stylesheet" href="styles.css">
   <title>Challenger 2</title>
 </head>
-<div id="contenedor">
+
+<body>
+  <div class="triangulo"></div>
+  <div id="contenedor">
     <div class="cuadrado"></div>
-    <div class="circulo"></div>
-    <div class="triangulo"></div>
-</div>
+    <div class="triangulo" style="float:left; margin: 5px 0 0 5px; border-left: 100px solid #f0ad4e;"></div>
+  </div>
+  <div class="circulo"></div>
+  <!--
 <hr>
 <div id="container2">
   <div class="cuadrado2"></div>
@@ -23,4 +28,5 @@
 <div id="container4" >
   <div class="triangulo2"></div>  
 </div>
-  
+  -->
+</body>
